Ensure play area alignment

--- a/badam-sat-client/style.scss
+++ b/badam-sat-client/style.scss
@@ -36,8 +36,25 @@
 }
 
 .stack {
-    display: inline-block;
+    display: grid;
+    grid-template-rows: repeat(3, 1fr);
+    grid-template-areas:
+        "high"
+        "seven"
+        "low";
     font-size: 72px;
+}
+
+.seven {
+    grid-area: seven;
+}
+
+.low {
+    grid-area: low;
+}
+
+.high {
+    grid-area: high;
 }
 
 .playable {
